--- a/rbac-project/src/main/resources/application.yml
+++ b/rbac-project/src/main/resources/application.yml
@@ -8,6 +8,8 @@ spring:
         driverClassName: org.h2.Driver
         jpa:
             database-platform: org.hibernate.dialect.H2Dialect
+            hibernate:
+                ddl-auto: create
 
 my:
     secret:
